// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cast casts 1`] = `
"#version 450

    vec2 _01_getValue() { return vec2(1.0, 2.0); }
    
vec3 cast() {
  vec3 v = _01_getValue();
  return v.xyx;
}
"
`;

exports[`cast casts and links 1`] = `
"#version 450

    vec2 _01_getValue() { return vec2(1.0, 2.0); }
    
vec3 _02_cast() {
  vec3 v = _01_getValue();
  return v.xyx;
}


    vec3 _02_cast();
    void main() { _02_cast(); }
    "
`;
